@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.7193 2004/09/21 08:42:03 wiz Exp $
+$NetBSD: CHANGES,v 1.7194 2004/09/21 10:16:05 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -4300,3 +4300,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated verilog-current to 20040915 [dmcmahill 2004-09-21]
 	Updated bidwatcher to 1.3.16 [tron 2004-09-21]
 	Updated libmikmod to 3.1.11.1 [wiz 2004-09-21]
+	Updated clamsmtp to 0.8 [xtraeme 2004-09-21]
